<resources>
    <string name="app_name">Victoria</string>

    <string name="hello_world">Hello world!</string>
    <string name="system_name">Your Name</string>
    <string name="system_location">Your Location</string>
    <string name="action_settings">Settings</string>
    <string name="mode_normal">Normal Mode</string>
    <string name="mode_driving">Driving Mode</string>
    <string name="mode_school">School Mode</string>
    <string name="mode_night">Night Mode</string>
    <string name="toggle_dj">DJ</string>
    <string name="toggle_dnd">Do Not Disturb</string>
    <string name="title_activity_welcome">Welcome!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
